src/App.css
/* ... */
.header__search i {
    padding-top: 5px;
}

.header__search-input {
    outline: none;
    border: none;
    padding-left: 10px;
    font-size: 0.8rem;
    width: max-content;
    flex: 1;
}

input,
input::placeholder {
    font-size: 0.9rem;
}

input {
    color: var(--dark-color);
}
.header__user-info {
    display: flex;
    align-items: center;
    transition: .2s;
}

.header__user-info .profile {
    display: flex;
    padding: 1rem;
    margin-right: 1rem;
}


.icon {
    font-size: 1.6rem !important;
    color: #646464;
}

.profile p {
    font-size: 1rem;
    font-weight: 400;
    margin: 0 0.5rem 0.5rem 0.5rem;
    text-decoration: none;
}

.profile__link {
    text-decoration: none;
}


.after-effect {
    width: 16rem;
    padding: 20px;
}

.after-effect:hover {
    background-color: var(--bg-color);
    transform: scale(1.1);
}

.profile__link {
    display: flex;
}
.profile__link p {
    color: var(--dark-color);
    font-size: 0.85rem;
    line-height: 1.2rem;
}

.profile {
    display: flex;
    position: relative;
    align-items: center;
    justify-content: center;
}

.profile .sub-profile {
    display: flex;
}

.profile-items {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.profile-account {
    display: flex;
    justify-content: flex-start;
}

.profile-orders {
    display: flex;
    justify-content: flex-start;
    
}

.logout-section {
    display: flex;
    justify-content: flex-start;
}

.toggle-menu {
    display: none;
}

.nav-bar {
    width: 12rem;
    display: flex;
    flex-direction: column;
    z-index: 100;
    align-items: flex-start;
    position: absolute;
    top: 40px;
    right: 20px;
    overflow: hidden;
    background-color: var(--light);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    border-radius: 10px;
    padding: 0 0 20px 0;
}

.nav-bar .profile__link-footer {
    display: flex;
    justify-content: center;
}

.profile .user-text {
    font-size: medium;
}

.header__cart p {
    font-weight: 400;
    cursor: pointer;
    font-size: medium;
}

.header__cart .cart-icon {
    margin-right: 10px;
    cursor: pointer;
    text-decoration: none;
    color: var(--dark-color);
}

.header__cart  {
    text-decoration: none;
}

.cart-basket {
    position: relative;
}

.count {
    position: absolute;
    bottom: 1rem;
    left: 1rem;
    background-color: var(--primary-color);
    border-radius: 50%;
    width: 1.5rem;
    height: 1.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--light);
}

.count p {
    font-size: 0.8rem;
}

.cart-name {
    margin-left: 10px;
    font-size: 1rem;
    position: relative;
    bottom: 0.25rem;
    font-weight: 400;
}


/* header end */

/* Home  */
/* Banner styling start here */
.banner {
    display: flex;
    width: 100%;
    height: 40rem;
    padding-left: 2rem;
    align-items: center;
    justify-content: space-between;
    background-color: var(--primary-color);
    margin: 1rem 0;
    overflow: hidden;
}

.banner-info {
    margin-left: 2rem;
    height: 100%;
    width: 50%;
    padding: 5rem;
    flex: 1;
}

.image-holder {
    width: 50%;
    height: 100%;
}

.image-holder img {
    position: relative;
    object-fit: cover;
    z-index: 2;
    width: 100%;
    height: 100%;
}

.banner-info h2 {
    font-family: "Georgia", serif;
    font-weight: 300;
    font-size: 4rem;
    color: var(--light);
}

.banner-info h1 {
    font-weight: bolder;
    font-size: 5rem;
    width: fit-content;
    color: var(--light);
}

.banner-info h3 {
    font-weight: 600;
    font-family: 'Segoe UI', sans-serif;
    color: var(--light);
    padding: 0.6rem 1.25rem;
    letter-spacing: 0.8rem;
    outline: 0.3rem solid var(--light);
    width: fit-content;
}

.banner-info p {
    font-size: 1rem;
    font-family: "Raleway", sans-serif;
    color: var(--light);
    max-width: 40rem;
    margin: 2rem 0;
    line-height: 1.3rem;
    font-weight: 400;
}

.btn {
    outline: none;
    border: none;
    color: var(--light);
    background-color: var(--primary-color);
    padding: 0.8rem 2.5rem;
    font-size: 0.8rem;
    display: none;
    width: auto;
    justify-content: center;
    align-items: flex-start;
    border-radius: 1.5rem;
    transition: .3s ease-in-out;
    margin-top: 1rem;
}

.arrow {
    background-color: #fbf8f822;
    border-radius: 46%;
    color: var(--light);
    margin-left: 1.5rem;
    padding: 5px;
}  

.arrow-icon {
    font-size: 1.2rem !important;
}

.product:hover .btn {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.product:hover .product-details {
    display: none;
}

.product:hover img {
    width: 50%;
}


.banner__btn {
    outline: none;
    border: none;
    color: var(--light);
    background-color: var(--dark-color);
    padding: 1rem 2rem;
    font-size: 0.8rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-radius: 0.5rem;
    transition: .3s ease;
}

.btn:hover {
    background-color: #495c32;
    
}

.banner__btn:hover {
    transform: scale(1.02);
}


/* Banner styling end */

/* Products starts */
.products {
    display: grid;
    z-index: 3;
    margin: 0 0 0 0.5rem;
    grid-template-columns: auto auto auto auto;
    gap: 0.5rem;
    padding: 0 0.8rem 1.2rem 0.8rem;
}

.product {
    background-color: white;
    display: flex;
    padding: 0.5rem 0;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 0.5rem;
}


.product img {
    width: 50%;
}

.product-details {
    margin: 2rem 1rem;
}

.product__rating {
    display: flex;
}



/* Product Styling ends */
/* Footer styling start here */
.footer {
    background-color: var(--primary-color);
    color: var(--light);
    width: 100%;
    margin-top: 2rem;
    padding: 2rem 4rem;
}

.center {
    flex: 1;
    margin-bottom: 0;
    padding: 2rem;
}
/* ... */

